# peaq-network-node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.Old  Dockerfile.parachain  Dockerfile.peaq-node  README.md  diff.txt  docker-compose.yml  rust-toolchain  sonar-project.properties
client/evm-tracing/: Cargo.toml
client/evm-tracing/src/formatters/: blockscout.rs  call_tracer.rs  raw.rs
client/evm-tracing/src/listeners/: call_list.rs  raw.rs
client/evm-tracing/src/types/: block.rs  mod.rs  single.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  cli_opt.rs  command.rs  main.rs  primitives.rs  rpc.rs  service.rs
node/src/chain-specs/: agung.json  krest-raw.json  krest.json  kusama.json  peaq-dev-parachain-raw.json  peaq-dev-raw.json  peaq-raw.json  rococo-local-relaychain-raw.json
node/src/local/: chain_spec.rs
node/src/parachain/: agung_chain_spec.rs  chain_spec.rs  dev_chain_spec.rs  krest_chain_spec.rs  mod.rs  peaq_chain_spec.rs  service.rs  shell_upgrade.rs  utils.rs
node/src/rpc/: tracing.rs
pallets/: README
pallets/asset-registry/: Cargo.toml
pallets/asset-registry/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/block-reward/: Cargo.toml  README.md
pallets/block-reward/src/: averaging.rs  averaging.rs.old  benchmarking.rs  lib.rs  lib.rs.old  migrations.rs  mock.rs  tests.rs  types.rs  weightinfo.rs  weights.rs
pallets/evm-accounts/: Cargo.toml
pallets/evm-accounts/src/: convert_impl.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/inflation-calculator/: Cargo.toml
pallets/inflation-calculator/src/: lib.rs
pallets/inflation-manager/: Cargo.toml
pallets/inflation-manager/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  types.rs  weightinfo.rs  weights.rs
pallets/parachain-staking/: Cargo.toml
pallets/parachain-staking/src/: api.rs  benchmarking.rs  default_weights.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  reward_config_calc.rs  reward_rate.rs  reward_rate_config.rs  set.rs  tests.rs  types.rs  weightinfo.rs  weights.rs
pallets/peaq-did/: Cargo.toml  README.md
pallets/peaq-did/src/: benchmarking.rs  did.rs  lib.rs  mock.rs  structs.rs  tests.rs
pallets/staking-coefficient-reward/: Cargo.toml
pallets/staking-coefficient-reward/src/: benchmarking.rs  default_weights.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weightinfo.rs  weights.rs
pallets/staking-fixed-percentage-reward/: Cargo.toml  benchmarking.rs
pallets/staking-fixed-percentage-reward/src/: benchmarking.rs  default_weights.rs  lib.rs  migrations.rs  mock.rs  tests.rs
pallets/support/: Cargo.toml
pallets/support/src/: lib.rs  mocks.rs
pallets/template/: Cargo.toml
pallets/xc-asset-config/: Cargo.toml
pallets/xc-asset-config/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
precompiles/: lib.rs
precompiles/batch/: Batch.sol  Cargo.toml
precompiles/batch/src/: lib.rs  mock.rs  tests.rs
precompiles/parachain-staking/: Cargo.toml  ParachainStaking.sol
precompiles/parachain-staking/src/: lib.rs  mock.rs  tests.rs
precompiles/peaq-did/: Cargo.toml  did.sol
precompiles/peaq-did/src/: lib.rs  mock.rs
precompiles/peaq-rbac/: Cargo.toml  rbac.sol
precompiles/peaq-rbac/src/: lib.rs  selectors.rs  structs.rs
precompiles/peaq-storage/: Cargo.toml  storage.sol
precompiles/peaq-storage/src/: lib.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/docs/: precompile_macro.md
precompiles/utils/macro/src/: derive_codec.rs  derive_evm_data.rs  generate_function_selector.rs  lib.rs  precompile_name_from_address.rs
precompiles/utils/macro/src/precompile/: expand.rs  parse.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/macro/tests/compile-fail/precompile/discriminant/: dont-return-option.stderr  return-incomplete-option.stderr
precompiles/utils/macro/tests/expand/: precompile.expanded.rs  precompileset.expanded.rs  returns_tuple.expanded.rs
precompiles/utils/macro/tests/pass/: precompile_fn_modifiers.rs
precompiles/utils/src/: handle.rs  lib.rs  logs.rs  modifier.rs  precompile_set.rs  revert.rs  solidity.rs  substrate.rs  testing.rs  tests.rs
precompiles/utils/src/data/: bytes.rs  mod.rs  native.rs  xcm.rs
precompiles/utils/src/evm/: costs.rs  handle.rs  logs.rs
precompiles/utils/src/solidity/: modifier.rs
precompiles/utils/src/solidity/codec/: bytes.rs  mod.rs  native.rs  xcm.rs
precompiles/utils/src/testing/: account.rs  execution.rs  handle.rs  mod.rs  modifier.rs  solidity.rs
precompiles/utils/tests-external/: Cargo.toml
precompiles/vesting/: Cargo.toml  vesting.sol
precompiles/vesting/src/: lib.rs  mock.rs  tests.rs
precompiles/xcm-utils/: Cargo.toml  XcmUtils.sol
precompiles/xcm-utils/src/: lib.rs  mock.rs  tests.rs
precompiles/xtokens/: Cargo.toml  Xtokens.sol
precompiles/xtokens/src/: lib.rs  mock.rs  tests.rs
primitives/ext/: Cargo.toml
primitives/ext/src/: lib.rs
primitives/xcm/: Cargo.toml
primitives/xcm/src/: asset_id.rs  currency.rs  currency_asset_id.rs  currency_id.rs  evm.rs  lib.rs  peaq_currency_id.rs  tests.rs  xcm.rs  xcm_asset_id.rs
primitives/xcm/src/xcm/: mod.rs  tests.rs
runtime/: Cargo.toml
runtime/agung/: Cargo.toml
runtime/agung/src/: constants.rs  lib.rs  precompiles.rs  xcm_config.rs
runtime/agung/src/weights/: mod.rs
runtime/common/: Cargo.toml
runtime/common/src/: asset.rs  lib.rs  payment.rs  wrapper.rs  xcm_impls.rs  zenlink.rs
runtime/evm_tracer/: Cargo.toml
runtime/evm_tracer/src/: lib.rs
runtime/krest/: Cargo.toml
runtime/krest/src/: constants.rs  lib.rs  precompiles.rs  vesting_migration.rs  xcm_config.rs
runtime/peaq/: Cargo.toml
runtime/peaq-dev/: Cargo.toml
runtime/peaq-dev/src/: constants.rs  impls.rs  lib.rs  precompiles.rs  xcm_config.rs  xcm_impls.rs  zenlink.rs
runtime/peaq-dev/src/weights/: pallet_xcm.rs
runtime/peaq/src/: constants.rs  lib.rs  precompiles.rs  xcm_config.rs
runtime/peaq/src/weights/: pallet_xcm.rs
runtime/src/: lib.rs  precompiles.rs
scripts/: Dockerfile  (+5 more)
(+99 files in other folders)
