[workspace]
members = [
    "node",
    "pallets/*",
    "runtime/*",
    "primitives/xcm",
    "precompiles/utils",
    "precompiles/utils/macro",
	"precompiles/peaq-did",
	"precompiles/peaq-storage"
]
resolver = "2"

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
codegen-units = 1
incremental = false
inherits = "release"
lto = true

[profile.release]
# Peaq runtime requires unwinding.
opt-level = 3
panic = "unwind"

[workspace.dependencies]
# Crates
affix = "0.1.2"
async-trait = "0.1.59"
bstringify = "0.1.2"
case = "1.0"
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
clap = { version = "4.0.32"}
derive_more = "0.99"
environmental = { version = "1.1.2", default-features = false }
futures = { version = "0.3.21" }
evm = { version = "0.40", default-features = false }
evm-gasometer = { version = "0.40", default-features = false }
evm-runtime = { version = "0.40", default-features = false }
ethereum = { version = "0.14.0", default-features = false, features = [ "with-codec" ] }
ethereum-types = { version = "0.14.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.3.1" }
impl-trait-for-tuples = "0.2.2"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpsee = { version = "0.16.2" }
log = "0.4.17"
macrotest = "1.0.9"
num_enum = { version = "0.5.3", default-features = false }
parity-scale-codec = { version = "3.2.2", default-features = false }
paste = "1.0.8"
prettyplease = "0.1.18"
proc-macro2 = "1.0"
quote = "1.0"
rlp = { version = "0.5", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
sha3 = { version = "0.9.1", default-features = false }
serde_json = { version = "1.0" }
serde = { version = "1.0.151" }
slices = "0.2.0"
smallvec = { version = "1.6.1" }
structopt = "0.3.8"
similar-asserts = { version = "1.1.0" }
syn = { version = "1.0" }
tokio = { version = "1.13.0" }
trybuild = "1.0"
tracing = "0.1.34"
url = "2.2.2"

# Cumulus
cumulus-client-cli = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-client-network = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-client-service = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-client-consensus-aura = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-client-consensus-common = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-relay-chain-interface = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-pallet-parachain-system = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43", default-features = false }
cumulus-primitives-core = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43" }
cumulus-primitives-utility = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43", default-features = false }
parachain-info = { git = "https://github.com/peaqnetwork/cumulus", branch = "peaq-polkadot-v0.9.43", default-features = false }

# Frontier
fc-consensus = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43" }
fc-db = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43" }
fc-mapping-sync = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43" }
fc-rpc = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43" }
fc-rpc-core = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43" }
fp-consensus = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43" }
fp-storage = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43" }
fp-dynamic-fee = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43" }
fc-storage = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43" }
fp-evm = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
fp-rpc = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
fp-self-contained = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-base-fee = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-ethereum = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-evm = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/peaqnetwork/frontier", branch = "peaq-polkadot-v0.9.43", default-features = false }

# Open-Runtime-Module-Library
orml-currencies = { git = "https://github.com/peaqnetwork/open-runtime-module-library", branch = "peaq-polkadot-v0.9.43", default-features = false }
orml-tokens = { git = "https://github.com/peaqnetwork/open-runtime-module-library", branch = "peaq-polkadot-v0.9.43", default-features = false }
orml-traits = { git = "https://github.com/peaqnetwork/open-runtime-module-library", branch = "peaq-polkadot-v0.9.43", default-features = false }
orml-xtokens = { git = "https://github.com/peaqnetwork/open-runtime-module-library", branch = "peaq-polkadot-v0.9.43", default-features = false }
orml-unknown-tokens = { git = "https://github.com/peaqnetwork/open-runtime-module-library", branch = "peaq-polkadot-v0.9.43", default-features = false }
orml-xcm-support = { git = "https://github.com/peaqnetwork/open-runtime-module-library", branch = "peaq-polkadot-v0.9.43", default-features = false }

# Polkadot
polkadot-parachain = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43", default-features = false }
polkadot-primitives = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43", default-features = false }
polkadot-runtime-common = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43", default-features = false }
xcm = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43", default-features = false }
xcm-builder = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43", default-features = false }
xcm-executor = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-xcm = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43", default-features = false }
polkadot-service = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }
polkadot-cli = { git = "https://github.com/peaqnetwork/polkadot", branch = "peaq-polkadot-v0.9.43" }

# Substrate
frame-support = { git = "https://github.com/peaqnetwork/substrate", branch ="peaq-polkadot-v0.9.43", default-features = false }
sp-externalities = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-runtime-interface = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-core = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-runtime = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-std = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
frame-benchmarking = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
frame-executive = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
frame-system = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
frame-system-benchmarking = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-aura = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-balances = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-sudo = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-timestamp = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-transaction-payment = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-block-builder = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-consensus-aura = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-inherents = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-offchain = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-session = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-transaction-pool = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-version = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-contracts = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-multisig = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-utility = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-treasury = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-vesting = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-io = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-session = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-authorship = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
pallet-collective = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-weights = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = true }
pallet-transaction-payment-rpc = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-basic-authorship = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-cli = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-client-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-consensus = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-consensus-aura = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-executor = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-keystore = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-rpc = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-rpc-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-service = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-telemetry = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-transaction-pool = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-transaction-pool-api = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-blockchain = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-consensus = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-timestamp = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
substrate-frame-rpc-system = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-network = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-network-common = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-network-sync = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-tracing = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
substrate-prometheus-endpoint = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sp-keystore = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-chain-spec = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43" }
sc-utils = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
sp-staking = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
frame-try-runtime = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43", default-features = false }
try-runtime-cli = { git = "https://github.com/peaqnetwork/substrate", branch = "peaq-polkadot-v0.9.43"}

# Zenlink-DEX-Module
zenlink-protocol = { git = "https://github.com/peaqnetwork/Zenlink-DEX-Module", branch = "peaq-polkadot-v0.9.43", default-features = false }
zenlink-protocol-rpc = { git = "https://github.com/peaqnetwork/Zenlink-DEX-Module", branch = "peaq-polkadot-v0.9.43", default-features = false }
zenlink-protocol-runtime-api = { git = "https://github.com/peaqnetwork/Zenlink-DEX-Module", branch = "peaq-polkadot-v0.9.43", default-features = false }

# Peaq's own developments
peaq-pallet-did = { git = "https://github.com/peaqnetwork/peaq-pallet-did.git", branch = "peaq-polkadot-v0.9.43", default-features = false }
peaq-pallet-did-rpc = { git = "https://github.com/peaqnetwork/peaq-pallet-did.git", branch = "peaq-polkadot-v0.9.43" }
peaq-pallet-did-runtime-api = { git = "https://github.com/peaqnetwork/peaq-pallet-did.git", branch = "peaq-polkadot-v0.9.43", default-features = false }
peaq-pallet-mor = { git = "https://github.com/peaqnetwork/peaq-pallet-mor.git", branch = "peaq-polkadot-v0.9.43", default-features = false }
peaq-pallet-rbac = { git = "https://github.com/peaqnetwork/peaq-pallet-rbac.git", branch = "peaq-polkadot-v0.9.43", default-features = false }
peaq-pallet-rbac-rpc = { git = "https://github.com/peaqnetwork/peaq-pallet-rbac.git", branch = "peaq-polkadot-v0.9.43" }
peaq-pallet-rbac-runtime-api = { git = "https://github.com/peaqnetwork/peaq-pallet-rbac.git", branch = "peaq-polkadot-v0.9.43", default-features = false }
peaq-pallet-storage = { git = "https://github.com/peaqnetwork/peaq-storage-pallet.git", branch = "peaq-polkadot-v0.9.43", default-features = false }
peaq-pallet-storage-rpc = { git = "https://github.com/peaqnetwork/peaq-storage-pallet.git", branch = "peaq-polkadot-v0.9.43", default-features = false }
peaq-pallet-storage-runtime-api = { git = "https://github.com/peaqnetwork/peaq-storage-pallet.git", branch = "peaq-polkadot-v0.9.43", default-features = false }
peaq-pallet-transaction = { git = "https://github.com/peaqnetwork/peaq-pallet-transaction.git", branch = "peaq-polkadot-v0.9.43", default-features = false }
